--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "vue-cli-service build && gh-pages -d dist"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@supabase/supabase-js": "^2.49.4",
     "uuid": "^11.1.0",
