--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@supabase/supabase-js": "^2.49.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "qrcode": "^1.5.4",
     "uuid": "^11.1.0",
     "vue": "^2.7.16",
     "vue-loading-overlay": "^3.4.3",
