--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "docx-pdf": "^0.0.1",
     "express": "^4.21.2",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
+    "mammoth": "^1.9.1",
     "qrcode": "^1.5.4",
     "uuid": "^11.1.0",
     "vue": "^2.7.16",
