--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
     "mammoth": "^1.9.1",
+    "pdfjs-dist": "^5.4.149",
     "qrcode": "^1.5.4",
     "uuid": "^11.1.0",
     "vue": "^2.7.16",
@@ -38,14 +39,14 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/test-utils": "^1.3.6",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.28.0",
     "gh-pages": "^6.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "vue-jest": "^3.0.7",
-    "babel-jest": "^29.7.0",
     "jest-serializer-vue": "^3.1.0",
-    "vue-eslint-parser": "^10.1.3"
+    "vue-eslint-parser": "^10.1.3",
+    "vue-jest": "^3.0.7"
   }
 }
